Foi realizada a refatoração do código e melhoria do mesmo, além de criação de interfaces para melhorar o contrato